correction visibility

--- a/assets/sass/css/styles.scss
+++ b/assets/sass/css/styles.scss
@@ -19,14 +19,16 @@ header {
       margin-left: -10%;
       li {
         a {
-          color: #b83500;
+          color: #b83b09;
           text-decoration: none;
           font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
             "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+          font-weight: bolder;
         }
         a:hover {
           color: white;
           text-decoration: underline #f56849;
+          text-underline-offset: 8px;
         }
       }
     }
@@ -142,7 +144,7 @@ header {
       margin-right: 10px;
     }
     img:hover {
-      zoom: 150%;
+      zoom: 120%;
     }
   }
 }
